applications/overlays/hcloud-robot/media/ingress-webdav.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-webdav-ingress
  namespace: media
  annotations:
    'external-dns.alpha.kubernetes.io/hostname': 'robot-media-webdav.macro.network'
    'external-dns.alpha.kubernetes.io/cloudflare-proxied': 'false'
    'traefik.ingress.kubernetes.io/router.tls.options': kube-system-non-proxied@kubernetescrd
    'traefik.ingress.kubernetes.io/router.entrypoints': 'websecure'
spec:
  tls:
    - hosts:
        - robot-media-webdav.macro.network
  rules:
    - host: robot-media-webdav.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rclone-webdav
                port:
                  number: 50000
---
apiVersion: v1
kind: Service
metadata:
  name: rclone-webdav
spec:
  selector:
    app.kubernetes.io/name: rclone
    app.kubernetes.io/instance: rclone
  ports:
    - protocol: TCP
      port: 50000
      targetPort: webdav
  type: ClusterIP
